antlr_phase2/CMinusParser.py
# Generated from CMinus.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CMinusParser ( Parser ):

    grammarFileName = "CMinus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'int'", "'void'", "'return'", 
                     "'break'", "'repeat'", "'until'", "'='", "'<'", "'=='", 
                     "'+'", "'-'", "'*'", "';'", "','", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "INT", "VOID", "RETURN", 
                      "BREAK", "REPEAT", "UNTIL", "ASSIGN", "LT", "EQ", 
                      "PLUS", "MINUS", "TIMES", "SEMI", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
                      "ID", "NUM", "WS" ]

    RULE_program = 0
    RULE_declaration_list = 1
    RULE_declaration = 2
    RULE_declaration_initial = 3
    RULE_declaration_prime = 4
    RULE_var_declaration_prime = 5
    RULE_fun_declaration_prime = 6
    RULE_type_specifier = 7
    RULE_params = 8
    RULE_param_list = 9
    RULE_param = 10
    RULE_param_prime = 11
    RULE_compound_stmt = 12
    RULE_statement_list = 13
    RULE_statement = 14
    RULE_expression_stmt = 15
    RULE_selection_stmt = 16
    RULE_iteration_stmt = 17
    RULE_return_stmt = 18
    RULE_return_stmt_prime = 19
    RULE_expression = 20
    RULE_b = 21
    RULE_h = 22
    RULE_simple_expression_zegond = 23
    RULE_simple_expression_prime = 24
    RULE_c = 25
    RULE_relop = 26
    RULE_additive_expression = 27
    RULE_additive_expression_prime = 28
    RULE_additive_expression_zegond = 29
    RULE_d = 30
    RULE_addop = 31
    RULE_term = 32
    RULE_term_prime = 33
    RULE_term_zegond = 34
    RULE_g = 35
    RULE_factor = 36
    RULE_var_call_prime = 37
    RULE_var_prime = 38
    RULE_factor_prime = 39
    RULE_factor_zegond = 40
    RULE_args = 41
    RULE_arg_list = 42
    RULE_arg_list_prime = 43

    ruleNames =  [ "program", "declaration_list", "declaration", "declaration_initial", 
                   "declaration_prime", "var_declaration_prime", "fun_declaration_prime", 
                   "type_specifier", "params", "param_list", "param", "param_prime", 
                   "compound_stmt", "statement_list", "statement", "expression_stmt", 
                   "selection_stmt", "iteration_stmt", "return_stmt", "return_stmt_prime", 
                   "expression", "b", "h", "simple_expression_zegond", "simple_expression_prime", 
                   "c", "relop", "additive_expression", "additive_expression_prime", 
                   "additive_expression_zegond", "d", "addop", "term", "term_prime", 
                   "term_zegond", "g", "factor", "var_call_prime", "var_prime", 
                   "factor_prime", "factor_zegond", "args", "arg_list", 
                   "arg_list_prime" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    INT=3
    VOID=4
    RETURN=5
    BREAK=6
    REPEAT=7
    UNTIL=8
    ASSIGN=9
    LT=10
    EQ=11
    PLUS=12
    MINUS=13
    TIMES=14
    SEMI=15
    COMMA=16
    LPAREN=17
    RPAREN=18
    LBRACK=19
    RBRACK=20
    LBRACE=21
    RBRACE=22
    ID=23
    NUM=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_list(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_listContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CMinusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.declaration_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CMinusParser.DeclarationContext,0)


        def declaration_list(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_listContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_list" ):
                listener.enterDeclaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_list" ):
                listener.exitDeclaration_list(self)




    def declaration_list(self):

        localctx = CMinusParser.Declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration_list)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.declaration()
                self.state = 91
                self.declaration_list()
                pass
            elif token in [-1, 1, 5, 6, 7, 15, 17, 21, 22, 23, 24]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_initial(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_initialContext,0)


        def declaration_prime(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_primeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = CMinusParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.declaration_initial()
            self.state = 97
            self.declaration_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_initialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(CMinusParser.Type_specifierContext,0)


        def ID(self):
            return self.getToken(CMinusParser.ID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_declaration_initial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_initial" ):
                listener.enterDeclaration_initial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_initial" ):
                listener.exitDeclaration_initial(self)




    def declaration_initial(self):

        localctx = CMinusParser.Declaration_initialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_initial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.type_specifier()
            self.state = 100
            self.match(CMinusParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun_declaration_prime(self):
            return self.getTypedRuleContext(CMinusParser.Fun_declaration_primeContext,0)


        def var_declaration_prime(self):
            return self.getTypedRuleContext(CMinusParser.Var_declaration_primeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_declaration_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_prime" ):
                listener.enterDeclaration_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_prime" ):
                listener.exitDeclaration_prime(self)




    def declaration_prime(self):

        localctx = CMinusParser.Declaration_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration_prime)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.fun_declaration_prime()
                pass
            elif token in [15, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.var_declaration_prime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaration_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(CMinusParser.LBRACK, 0)

        def NUM(self):
            return self.getToken(CMinusParser.NUM, 0)

        def RBRACK(self):
            return self.getToken(CMinusParser.RBRACK, 0)

        def SEMI(self):
            return self.getToken(CMinusParser.SEMI, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_var_declaration_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration_prime" ):
                listener.enterVar_declaration_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration_prime" ):
                listener.exitVar_declaration_prime(self)




    def var_declaration_prime(self):

        localctx = CMinusParser.Var_declaration_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_declaration_prime)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(CMinusParser.LBRACK)
                self.state = 107
                self.match(CMinusParser.NUM)
                self.state = 108
                self.match(CMinusParser.RBRACK)
                self.state = 109
                self.match(CMinusParser.SEMI)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(CMinusParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_declaration_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CMinusParser.LPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(CMinusParser.ParamsContext,0)


        def RPAREN(self):
            return self.getToken(CMinusParser.RPAREN, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_fun_declaration_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun_declaration_prime" ):
                listener.enterFun_declaration_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun_declaration_prime" ):
                listener.exitFun_declaration_prime(self)




    def fun_declaration_prime(self):

        localctx = CMinusParser.Fun_declaration_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fun_declaration_prime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CMinusParser.LPAREN)
            self.state = 114
            self.params()
            self.state = 115
            self.match(CMinusParser.RPAREN)
            self.state = 116
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CMinusParser.INT, 0)

        def VOID(self):
            return self.getToken(CMinusParser.VOID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_type_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_specifier" ):
                listener.enterType_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_specifier" ):
                listener.exitType_specifier(self)




    def type_specifier(self):

        localctx = CMinusParser.Type_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CMinusParser.INT, 0)

        def ID(self):
            return self.getToken(CMinusParser.ID, 0)

        def param_prime(self):
            return self.getTypedRuleContext(CMinusParser.Param_primeContext,0)


        def param_list(self):
            return self.getTypedRuleContext(CMinusParser.Param_listContext,0)


        def VOID(self):
            return self.getToken(CMinusParser.VOID, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = CMinusParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(CMinusParser.INT)
                self.state = 121
                self.match(CMinusParser.ID)
                self.state = 122
                self.param_prime()
                self.state = 123
                self.param_list()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(CMinusParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(CMinusParser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(CMinusParser.ParamContext,0)


        def param_list(self):
            return self.getTypedRuleContext(CMinusParser.Param_listContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = CMinusParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(CMinusParser.COMMA)
                self.state = 129
                self.param()
                self.state = 130
                self.param_list()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_initial(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_initialContext,0)


        def param_prime(self):
            return self.getTypedRuleContext(CMinusParser.Param_primeContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = CMinusParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.declaration_initial()
            self.state = 136
            self.param_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(CMinusParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(CMinusParser.RBRACK, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_param_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_prime" ):
                listener.enterParam_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_prime" ):
                listener.exitParam_prime(self)




    def param_prime(self):

        localctx = CMinusParser.Param_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_prime)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(CMinusParser.LBRACK)
                self.state = 139
                self.match(CMinusParser.RBRACK)
                pass
            elif token in [16, 18]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CMinusParser.LBRACE, 0)

        def declaration_list(self):
            return self.getTypedRuleContext(CMinusParser.Declaration_listContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(CMinusParser.Statement_listContext,0)


        def RBRACE(self):
            return self.getToken(CMinusParser.RBRACE, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = CMinusParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compound_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(CMinusParser.LBRACE)
            self.state = 144
            self.declaration_list()
            self.state = 145
            self.statement_list()
            self.state = 146
            self.match(CMinusParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CMinusParser.StatementContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(CMinusParser.Statement_listContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)




    def statement_list(self):

        localctx = CMinusParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement_list)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 5, 6, 7, 15, 17, 21, 23, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.statement()
                self.state = 149
                self.statement_list()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Expression_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Compound_stmtContext,0)


        def selection_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Selection_stmtContext,0)


        def iteration_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Iteration_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(CMinusParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return CMinusParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CMinusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 15, 17, 23, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.expression_stmt()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.compound_stmt()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.selection_stmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.iteration_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CMinusParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(CMinusParser.SEMI, 0)

        def BREAK(self):
            return self.getToken(CMinusParser.BREAK, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_expression_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_stmt" ):
                listener.enterExpression_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_stmt" ):
                listener.exitExpression_stmt(self)




    def expression_stmt(self):

        localctx = CMinusParser.Expression_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression_stmt)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 23, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.expression()
                self.state = 162
                self.match(CMinusParser.SEMI)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(CMinusParser.BREAK)
                self.state = 165
                self.match(CMinusParser.SEMI)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(CMinusParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Selection_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CMinusParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CMinusParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CMinusParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CMinusParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMinusParser.StatementContext)
            else:
                return self.getTypedRuleContext(CMinusParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CMinusParser.ELSE, 0)

        def getRuleIndex(self):
            return CMinusParser.RULE_selection_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelection_stmt" ):
                listener.enterSelection_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelection_stmt" ):
                listener.exitSelection_stmt(self)




    def selection_stmt(self):
